--- a/environment.yaml
+++ b/environment.yaml
@@ -3,6 +3,7 @@ channels:
   - pyg
   - conda-forge
   - pytorch
+  - nvidia
   - defaults
 dependencies:
   - cython=0.29.34
@@ -17,12 +18,14 @@ dependencies:
   - pykdtree=1.3.7.post0
   - pytest=7.2.2
   - python=3.11
-  - pytorch=2.3.0
-  - pytorch-scatter=2.1.2
+  - pytorch=2.3.1=py3.11_cuda12.1_cudnn8.9.2_0
+  - torchaudio=2.3.1=py311_cu121
+  - torchvision=0.18.1=py311_cu121
+  - pytorch-cuda=12.1
+  - pytorch-scatter=2.1.2=py311_torch_2.3.0_cu121
   - pyyaml=6.0
   - scikit-image=0.20.0
   - scipy=1.10.1
   - tensorboardx=2.6.2
-  - torchvision=0.18.0
   - tqdm=4.65.0
-  - trimesh=3.21.4
+  - trimesh=3.21.4 
