Add input params for sampling num points and scale factor

--- a/configs/pointcloud_crop/daisue.yaml
+++ b/configs/pointcloud_crop/daisue.yaml
@@ -3,7 +3,7 @@ data:
   input_type: pointcloud_crop
   classes: ['']
   path: data/daisue/processed
-  pointcloud_n: 200000
+  pointcloud_n: 2000000
   pointcloud_noise: 0.0
   pointcloud_file: pointcloud.npz
   voxels_file: null
